hphp/hack/test/typecheck/immutable_binding/immutable_catch_mutation.php.exp
File "immutable_catch_mutation.php", line 7, characters 5-5:
Let variables are immutable. Using let variable e in write context is not allowed. (Typing[4244])
